<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextMachineNameToAdd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="Machine Name"
        android:inputType="text" />

    <Button
        android:id="@+id/addMachineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add" />

    <Button
        android:id="@+id/cancelAddMachineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel" />
</LinearLayout>