<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGrocery"
        android:layout_width="368dp"
        android:layout_height="543dp"
        android:text="@string/groceries_list" />

    <LinearLayout
        android:id="@+id/layoutMessageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_alignParentBottom="true">

    <EditText
        android:id="@+id/editTextGroceryItem"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_item"
        android:inputType="textAutoCorrect"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
    </LinearLayout>
</RelativeLayout>