<resources>
    <string name="app_name">Homies</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="homies">Homies</string>
    <string name="back">Back</string>
    <string name="messages">Messages</string>
    <string name="grocery_list">Grocery List</string>
    <string name="laundry">Laundry</string>
    <string name="calendar">Calendar</string>
    <string name="location">Location</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="join_household">Join Household</string>
    <string name="create_household">Create Household</string>
    <string name="sign_out">Sign Out</string>
    <string name="add">Add</string>
    <string name="enter_machine_name">Enter Machine Name</string>
    <string name="machine_name_input">Machine Name Input</string>
    <string name="create_or_join_a_household">Create or Join a Household</string>
    <string name="create">Create</string>
    <string name="household_name">Household Name</string>
    <string name="join">Join</string>
    <string name="create_join_household">Create/Join Household</string>
    <string name="leave_household">Leave Household</string>
    <string name="send_message">Send message...</string>
    <string name="send">Send</string>
    <string name="display_name">Display Name</string>
    <string name="no_display_name">No Display Name</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="user_icon">User Icon</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaGV5aHNpbmwiLCJhIjoiY2xvbjZqZjV3MmdmdTJycXQyd3Rtd3Y5dyJ9.rAewteRH9-Qp3PlHkXUOVA</string>
    <string name="show_location">Show Current Location</string>
    <string name="dark_mode" />
    <string name="dark_mode_icon" />
    <string name="add_event" />
    <string name="event_name">Event name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_event" />
    <string name="new_item">New Item</string>
    <string name="groceries_list">Groceries List</string>

</resources>